Test/dafny0/ParseErrors.dfy.expect
ParseErrors.dfy(7,19): error: a chain cannot have more than one != operator
ParseErrors.dfy(9,37): error: this operator chain cannot continue with a descending operator
ParseErrors.dfy(10,38): error: this operator chain cannot continue with an ascending operator
ParseErrors.dfy(15,24): error: this operator chain cannot continue with a descending operator
ParseErrors.dfy(18,18): error: this operator cannot be part of a chain
ParseErrors.dfy(19,19): error: this operator cannot be part of a chain
ParseErrors.dfy(20,18): error: this operator cannot be part of a chain
ParseErrors.dfy(21,18): error: chaining not allowed from the previous operator
ParseErrors.dfy(28,19): error: chaining not allowed from the previous operator
ParseErrors.dfy(31,20): error: can only chain disjoint (!!) with itself.
ParseErrors.dfy(58,8): error: the main operator of a calculation must be transitive
ParseErrors.dfy(74,2): error: this operator cannot continue this calculation
ParseErrors.dfy(75,2): error: this operator cannot continue this calculation
ParseErrors.dfy(80,2): error: this operator cannot continue this calculation
ParseErrors.dfy(81,2): error: this operator cannot continue this calculation
ParseErrors.dfy(87,2): error: this operator cannot continue this calculation
16 parse errors detected in ParseErrors.dfy
